# katsuo-ropebound

./: .gitignore  Cargo.toml  E-management.md  MANAGEMENT.md  README.md  STRUCTURE.md  TODO.md
.cargo/: config.toml  pullMap.sh
.target/: .rustc_info.json
ai/: Cargo.toml
ai/src/: main.rs
assets/level1/: level1.json
assets/levels/: level1.ron
bevy-katsuo/: Cargo.toml
maploading/: Cargo.toml  README.md
maploading/javatobevy/: Cargo.toml
maploading/src/: main.rs
movementsystem/: Cargo.toml  app.rs  main.rs
movementsystem/config/: mod.rs  player.rs
movementsystem/player/: mod.rs  player_plugin.rs
multiplayer/: Cargo.toml
multiplayer/src/: main.rs
platform/: Cargo.toml
platform/src/: main.rs
prototype/: Cargo.toml
prototype/src/: main.rs
scratch/: app.rs
scripts/: mp-win.ps1  mp.sh
slideshow/: Cargo.toml
slideshow/src/: main.rs
src/: app.rs  config.rs  credits_Ket-Hwa.rs  event.rs  main.rs
src/ai/: controller.rs  mod.rs  observation.rs  observer.rs  policy.rs
src/camera/: follow.rs  mod.rs  resource.rs  spawn.rs
src/coin/: detect.rs  mod.rs  spawn.rs
src/collision/: binding.rs  calculation.rs  component.rs  detect.rs  ground.rs  mod.rs  update_aabb.rs
src/components/: collision.rs  mod.rs  motion.rs  rope.rs
src/config/: mod.rs  physics.rs  player.rs
src/control/: component.rs  control.rs  intent.rs  mod.rs  scheme.rs  spec_load.rs
src/game_ui/: mod.rs  ui.rs
src/lifetime/: README.md  camera_spawn.rs  component.rs  mod.rs  player_spawn.rs  resource.rs  rope_spawn.rs  spawn_track.rs
src/map/: atlas_layout.rs  background.rs  bundles.rs  data.rs  entity_builder.rs  game_object_builder.rs  loader.rs  mapdata.rs  mod.rs  platform.rs  platformfunction.rs  resource.rs  scroller.rs  util.rs
src/mapload/: background.rs  coin.rs  debug.rs  level_load.rs  map_spawn.rs  mapdata.rs  mod.rs  platform.rs  resource.rs
src/multiplayer/: client.rs  mod.rs  server.rs
src/physics/: bundle.rs  collision.rs  component.rs  config.rs  control.rs  gravity.rs  integrate.rs  mod.rs  momentum.rs  net_force.rs  platform.rs  player.rs  playerColi.rs  rope.rs  rope_force.rs  schedule.rs
src/platform/: mod.rs  spawn.rs
src/player/: bundle.rs  component.rs  config.rs  control.rs  event.rs  load_players.rs  (+4 more)
workspaces/maploading/: Cargo.toml
workspaces/maploading/assets/level1/: level1.json
workspaces/maploading/assets/other/: other.json
workspaces/maploading/assets/test/: test.json
workspaces/maploading/src/: app.rs  main.rs
workspaces/maploading/src/components/: mod.rs
workspaces/maploading/src/config/: mod.rs  physics.rs
workspaces/maploading/src/physics/: integrate.rs  rope_force.rs
workspaces/maploading/src/player/: player_plugin.rs
workspaces/maploading/src/util/: dev_mode.rs  maploading.rs  mod.rs  setup.rs
workspaces/maploading/src/util/map/: bundlebuilder.rs  bundles.rs  data.rs  entity_builder.rs  loader.rs  mod.rs  spawn.rs  util.rs
xtask/: Cargo.toml
(+48 files in other folders)
