[package]
name = "bevy-katsuo"

version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

# Apply all optimiations to dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

[package.metadata.commands]
pullmap = "sh .cargo/pullMap.sh"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Ket-Hwa Cheng (github: MorningDuringNight)",
    "Tingxu (github: RaineyMisty )",
    "Xiaoting (github: XtWang299)",
    "Zhuoyan (github: qhynSamuel)",
    "Jagger (github: Jagger-Hershey)",
    "Alli (github: AlliBatell)",
    "Sean (github: Sean-Shmulevich)"
]


[workspace.dependencies]
bevy = { version= "0.16.1", features=["bevy_sprite"] }
rand = "0.9.2"

[workspace]
members = [
    "prototype",
    "maploading",
    "slideshow",
    "xtask",
]
