[package]
name = "bevy-katsuo"

version = "0.1.0"
edition = "2024"

[package.metadata.commands]
mp = "./scripts/mp.sh"
mp-stop = "tmux kill-session -t bevy-mp"
mp-win = "pwsh ./scripts/mp-win.ps1"

[dependencies]
async-channel = "2.5.0"
bevy.workspace = true
rand.workspace = true
rustls = "0.23.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[features]
default = ["client"]
client = []
server = []

# Apply all optimiations to dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Ket-Hwa Cheng (github: MorningDuringNight)",
    "Tingxu (github: RaineyMisty )",
    "Xiaoting (github: XtWang299)",
    "Zhuoyan (github: qhynSamuel)",
    "Jagger (github: Jagger-Hershey)",
    "Alli (github: AlliBatell)",
    "Sean (github: Sean-Shmulevich)",
]


[workspace.dependencies]
bevy = { version = "0.16.1", features = ["bevy_sprite"] }
rand = "0.9.2"


[workspace]
members = [
    "workspaces/prototype",
    "workspaces/multiplayer",
    "workspaces/slideshow",
    "workspaces/xtask",
]
