[package]
name = "katsuo-ropebound"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

# Apply all optimiations to dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version= "0.16.1", features=["bevy_sprite"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
anyhow = "1.0"

[features]
default = ["client"]
client = []
server = []